--- a/src/components/Courses/Courses.scss
+++ b/src/components/Courses/Courses.scss
@@ -1,7 +1,48 @@
-.courses-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap:10px;
-    padding: 10px;
+@import "/src/colors.scss";
+
+.courses-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.course-card {
+  width: 300px;
+  background-color: $white-color;
+  border-radius: 10px;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+.course-card:hover {
+  transform: translateY(-5px);
+  box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+}
+
+.course-card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.course-price {
+  font-size: 1.2rem;
+  color: $yellow-color;
+  margin-bottom: 10px;
+}
+
+.add-to-cart-button {
+  background-color: transparent;
+  color: $black-color;
+  border: 1px solid $black-color;
+  border-radius: 5px;
+  padding: 5px 10px;
+  cursor: pointer;
+  transition: background-color 0.3s, color 0.3s, border-color 0.3s;
+}
+
+.add-to-cart-button:hover {
+  background-color: $yellow-color;
+  color: $black-color;
+  border-color: $yellow-color;
 }
